recursion.cons.last.Last.scala.error
Erreur de compilation :
Last:5: error: type mismatch;
 found   : Int
 required: List[Int]
  return last(   last(l.tail) + 1)
                              ^