recursion.cons.last.Last.scala.code
def last(l:List[Int]): Int = {


  return last( 	last(l.tail) + 1)
}